- Implement VB6Project.kt (allow access of vbp data) - Add a vbp file parser to parse the project information and build project scopes - Add an action to attach a vbp project file - Implement VB6WorkspaceService.kt   - Add method to attach project file   - Add method to find the project of a source file